Zorba - The XQuery Processor

version 2.5

New Features:
  * XQuery 3.0 functions
    - fn:available-environment-variables
    - fn:environment-variables
    - fn:uri-collection
    - fn:unparsed-text
    - fn:unparsed-text-available
    - fn:has-children#0
    - fn:nilled#0
    - fn:path
  * Extended API for Python, Java, PHP and Ruby.
  * Add jvm classpath to zorbacmd and to Zorba API. Tracked by #931816
  * Added full-text module.
  * Added support for NO_ICU (to not use ICU for unicode processing)
  * Added XQJ support.
  * Added CollectionManager and DocumentManager support for XQJ.

Bug Fixes/Other Changes:
  * Fixed bugs #931501 and #866987 (improved error messages for fn:format-number(). Additionally, the function now throws the FODF1310 error instead of XTDE1310, as the 3.0 spec requires)
  * Fixed bug 955170 (Catch clause with URILiteral-based wilcard NameTest)
  * Fixed memory leak in case of index truncation
  * Fixed bug #862971 (no error upon duplicate function declarations)
  * Fixed bug in mergeUpdates() method
  * Fixed bug 955135 (err:XQDY0044 not caught by try-catch expressions)
  * Fixed bug #986075 (encountering flwor expr with no clauses; due to common subexression being formed when inlining var in if-then-else expression) 
  * Fixed bug #967864 (var substitution did not update theFreeVars property)
  * Fixed bug #891650 (context size var not always declared within path expr)
  * Fixed bug #948879 (--uri-path doesn't work with fetch:content())
  * Fixed bug in MarkNodeCopyProps rule (static cast to replace_expr without chaing the expr kind first)  
  * Fixed bug in window iterator (binding the end vars in the output tuple stream)
  * Fixed bug #866547 (protect index-join rule from general flwor)
  * Fixed bug #867253 (cdml:delete-nodes should only remove root nodes)
  * Fixed bug #967428 (do not hoist index creation outside a try-catch)
  * Fixed performance problem with the findNodeSources function of the no-copy rule