@@ -33,16 +33,29 @@ namespace zorba {
 
 /*******************************************************************************
 
-  theCtx               : rchandle to the internal static_context obj that is
-                         wrapped by "this".
+  theCtx :
+  --------
+  rchandle to the internal static_context obj that is wrapped by "this".
 
-  theSctxMap           :
+  theSctxMap :
+  ------------
 
-  theDiagnosticHandler : Pointer to an error handle to handle any errors raised
-                         by the methods of this class.
-  theUserDiagnosticHandler : If true, theDiagnosticHandler is owned by "this", and it
-                         should be deleted when "this" is destroyed. Otherwise,
-                         theDiagnosticHandler is not owned by "this".
+  theMaxVarId :
+  -------------
+  If loadProlog() is called on "this", the compiler will store in theMaxVarId
+  the max variable id generated by the compilation of the given prolog. This 
+  is needed by the "outer" query, where the prolog will be loaded to.
+
+  theDiagnosticHandler :
+  ----------------------
+  Pointer to an error handle to handle any errors raised by the methods of 
+  this class.
+
+  theUserDiagnosticHandler :
+  --------------------------
+  If true, theDiagnosticHandler is owned by "this", and it should be deleted
+  when "this" is destroyed. Otherwise, theDiagnosticHandler is not owned by
+  "this".
 ********************************************************************************/
 class StaticContextImpl : public StaticContext
 {
@@ -53,6 +66,8 @@ protected:
   static_context_t                    theCtx;
 
   std::map<int, static_context_t>     theSctxMap;
+
+  ulong                               theMaxVarId;
 
   DiagnosticHandler                 * theDiagnosticHandler;
   bool                                theUserDiagnosticHandler;
@@ -70,25 +85,27 @@ public:
 
   virtual ~StaticContextImpl();
 
-  void loadProlog(const String&, const Zorba_CompilerHints_t &hints);
+  void loadProlog(const String&, const Zorba_CompilerHints_t& hints);
+
+  ulong getMaxVarId() const { return theMaxVarId; }
+
+  void setMaxVarId(ulong v) { if (v > theMaxVarId) theMaxVarId = v; }
 
   StaticContext_t createChildContext() const;
 
-  bool addNamespace( const String& prefix, const String& URI );
+  bool addNamespace(const String& prefix, const String& URI);
 
-  String getNamespaceURIByPrefix( const String& prefix ) const;
+  String getNamespaceURIByPrefix(const String& prefix) const;
 
-  void
-  getNamespaceBindings( NsBindings& aBindings ) const;
+  void getNamespaceBindings(NsBindings& aBindings) const;
 
-  bool setDefaultElementAndTypeNamespace( const String& URI );
+  bool setDefaultElementAndTypeNamespace(const String& URI);
 
-  String getDefaultElementAndTypeNamespace( ) const;
+  String getDefaultElementAndTypeNamespace() const;
 
-  bool setDefaultFunctionNamespace( const String& URI );
+  bool setDefaultFunctionNamespace(const String& URI);
 
-  virtual String
-  getDefaultFunctionNamespace( ) const;
+  virtual String getDefaultFunctionNamespace() const;
 
   virtual void
   addCollation( const String& URI );
