@@ -1,5 +1,11 @@
 Zorba - The XQuery Processor
 
+
+version 2.x
+
+  * Fixed bug #867170 (Variables declared in Prolog are Overwritten inside the query)
+
+
 version 2.5
 
 New Features:
@@ -40,7 +46,6 @@ Bug Fixes/Other Changes:
   * Fixed bug #966706 (key uniqueness of index not enforced during incremental refresh)
   * Fixed bug #906494 (default compile with D_FILE_OFFSET_BITS=64)
   * Fixed bug #988412 (date:current-dateTime daylight saving)
-  * Fixed bug #988417 (block internal modules)
   * Fixed bug #912586, #912593 and #912722 (assertion failures with lax validation)
   * Fixed bug #921458 (file:read-text-lines() blocking)
   * Fixed bug #981405 (do not hoist expr containing try-catch variables out of the associated try-catch expression)
